# intel-classmate-function-keys

./: Makefile.am  Makefile.in  OnScrDsp.cpp  OnScrDsp.h  README.md  button.h  chmod_for_bins  cmpc_pm.h  cmpcfk-control.sh  config.h.in  configure  configure.ac  fnkey.cpp  readme
data/: 80-ipml.rules  93fk-login  cmpcfk  cmpcfk-control.sh  user
data/Images/: Makefile.am  Makefile.in
debian/: changelog  control  install  intel-classmate-function-keys.desktop
