bin_PROGRAMS=fnkey
fnkey_SOURCES=fnkey.cpp OnScrDsp.cpp 

etcdir=/etc
bindir=/usr/bin/fnkey

images_DATA=data/Images/*
imagesdir=${bindir}/Images

#fnkey_DATA=cmpcfk
#fnkeydir=${bindir}/

control_DATA=data/cmpcfk-control.sh
controldir=${bindir}/

cameraconfig_DATA=data/camera.conf
cameraconfigdir=${etcdir}/cmpcfk/

#launch_DATA=data/93fk-login
#launchdir=${etcdir}/X11/Xsession.d/
launch_DATA=data/fk-login.sh
launchdir=${etcdir}/profile.d/

rules_DATA=data/80-ipml.rules
rulesdir=${etcdir}/udev/rules.d/

shortkey_DATA=data/user
shortkeydir=${bindir}/

deb_DATA=data/deb/*
debdir=/DEBIAN

