EXTRA_DIST=Brightness_BG.png Brightness_Level.png Brightness_Level_Blank.png \
	CapsLock_Off.png CapsLock_On.png Display_Dual.png Display_External.png \
	Display_LCD.png NoPrivilege.png NumLock_Off.png \
	NumLock_On.png ScrLock_Off.png ScrLock_On.png Volume_BG.png \
	Volume_Level.png Volume_Level_Blank.png Volume_Mute.png \
	Volume_Mute_Icon.png Wireless_Off.png Wireless_On.png
Imagesdir=/usr/bin/dcs/Images
Images_DATA=$(EXTRA_DIST)
